--- a/Dublin Cycling Directions/Base.lproj/Main.storyboard
+++ b/Dublin Cycling Directions/Base.lproj/Main.storyboard
@@ -19,6 +19,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="bdI-e2-qqv">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="trash" id="JrL-Ko-ofG"/>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="search" id="Tvq-GX-uiJ">
                             <connections>
                                 <action selector="touchedSearchButton:" destination="BYZ-38-t0r" id="6mN-7a-ivl"/>
